# xmlparser

./: pyproject.toml
src/xmlparser/: __init__.py  xmlparser.py
src/xmlparser/stylesheets/: jats.xsl
stylesheets/: jats.xsl
tests/: test.xml  test_xmlparser.py
