[project]
name = "xmlparser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <4"
dependencies = [
    "lxml>=5.4.0",
    "nltk>=3.9.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
