[project]
name = "xmlparser"
version = "0.1.0"
description = "D3 utilities for parsing XML files"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11, <4"
dependencies = ["lxml>=5.4.0", "nltk>=3.9.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
